<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_launch_screen" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_explore_detail_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".feature.more.AboutFragment">

            <Button
                android:id="@+id/send_email_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_button_round"
                android:drawableStart="@drawable/icon_email"
                android:foreground="?attr/selectableItemBackground"
                android:padding="12dp"
                android:text="@string/send_email_to_developer"
                android:textColor="@color/DarkGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/version_text">

                <ImageView
                    android:id="@+id/privacy_img"
                    android:layout_width="75dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/icon_privacy_policy" />

                <ImageView
                    android:id="@+id/github_img"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_github_logo" />

            </LinearLayout>

            <TextView
                android:id="@+id/about_app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/about_app_description"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/YellowSand"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@id/send_email_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/developer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/developer_description"
                android:textColor="@color/DeepOrange"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_description"
                android:textColor="@color/YellowSand"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/developer_text"
                app:layout_constraintVertical_bias="0.189" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>